--- a/frontend/src/app/project-details/project-details.component.scss
+++ b/frontend/src/app/project-details/project-details.component.scss
@@ -3,6 +3,7 @@
     display: inline-block;
     margin-left: 10px;
     padding: 10px;
+    width: 100% !important;
 }
 
 .p-toolbar-group-left {
@@ -53,4 +54,7 @@
 
 .detailRow {
     margin-bottom: 20px;
+}
+:host ::ng-deep .col {
+    width: 100% !important;
 }
