--- a/frontend/src/app/project-details/project-details.component.scss
+++ b/frontend/src/app/project-details/project-details.component.scss
@@ -58,3 +58,28 @@
 :host ::ng-deep .col {
     width: 100% !important;
 }
+
+.p-float-label {
+    margin-top: 20px;
+}
+
+:host ::ng-deep .titleBtn{
+    width: 100%;
+    margin-left: 10px;
+    padding: 10px;
+    font-weight: 500;
+}
+.header-main {
+    width: 100%;
+    margin-left: 10px;
+    padding: 0px 10px 10px;
+    font-weight: 500;
+}
+
+:host ::ng-deep .header-title {
+    display: inline-block;
+    margin-left: 10px;
+    position: absolute;
+    margin-top: 4px;
+    padding: inherit;
+}
