--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,8 @@
 <div class="card">
     <p-toolbar styleClass="mb-4">
         <ng-template pTemplate="left">
-            <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNew()"></button>
+            <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2"
+                (click)="openNew()"></button>
             <!-- <button pButton pRipple label="Delete" icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedProducts()" [disabled]="!selectedProducts || !selectedProducts.length"></button> -->
         </ng-template>
 
@@ -13,15 +14,17 @@
         </ng-template> -->
     </p-toolbar>
 
-    <p-table #dt [value]="data" [rows]="10" [paginator]="true" [globalFilterFields]="['name','country.name','representative.name','status']" responsiveLayout="scroll"
-        [(selection)]="selectedProducts" [rowHover]="true" dataKey="id"
+    <p-table #dt [value]="data" [rows]="10" [paginator]="true"
+        [globalFilterFields]="['projectName','country.name','representative.name','status']" responsiveLayout="scroll"
+        [(selection)]="selectedProducts" [rowHover]="true" dataKey="IDX"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
             <div class="flex align-items-center justify-content-between">
-                <h5 class="m-0">Manage Data</h5>
+                <h6 class="m-0">Search Data</h6>
                 <span class="p-input-icon-left">
                     <i class="pi pi-search"></i>
-                    <input pInputText type="text" (input)="dt.filterGlobal($any($event.target).value, 'contains')" placeholder="Search..." />
+                    <input pInputText type="text" (input)="dt.filterGlobal($any($event.target).value, 'contains')"
+                        placeholder="Search..." />
                 </span>
             </div>
         </ng-template>
@@ -30,36 +33,56 @@
                 <th style="width: 3rem">
                     <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                 </th>
-                <th pSortableColumn="name">PRM <p-sortIcon field="PRM"></p-sortIcon></th>
-                <th pSortableColumn="projectName">Name <p-sortIcon field="projectName"></p-sortIcon></th>
-                <th pSortableColumn="priority">Priority <p-sortIcon field="priority"></p-sortIcon></th>
-                <th pSortableColumn="region">Region <p-sortIcon field="region"></p-sortIcon></th>
-                <th pSortableColumn="health">Health <p-sortIcon field="health"></p-sortIcon></th>
-                <th pSortableColumn="projectManager">Project Manager <p-sortIcon field="projectManager"></p-sortIcon></th>
-                <th pSortableColumn="inventoryStatus">Status <p-sortIcon field="inventoryStatus"></p-sortIcon></th>
-                <th pSortableColumn="estimatedHours">Estimated Hours <p-sortIcon field="estimatedHours"></p-sortIcon></th>
-                <th pSortableColumn="startDate">Assigned Date <p-sortIcon field="startDate"></p-sortIcon></th>
-                <th pSortableColumn="goLive">Go Live <p-sortIcon field="goLive"></p-sortIcon></th>
+                <th pSortableColumn="name">PRM <p-sortIcon field="PRM"></p-sortIcon>
+                </th>
+                <th pSortableColumn="projectName">Name <p-sortIcon field="projectName"></p-sortIcon>
+                </th>
+                <th pSortableColumn="priority">Priority <p-sortIcon field="priority"></p-sortIcon>
+                </th>
+                <th pSortableColumn="region">Region <p-sortIcon field="region"></p-sortIcon>
+                </th>
+                <th pSortableColumn="health">Health <p-sortIcon field="health"></p-sortIcon>
+                </th>
+                <th pSortableColumn="projectManager">Project Manager <p-sortIcon field="projectManager"></p-sortIcon>
+                </th>
+                <th pSortableColumn="inventoryStatus">Status <p-sortIcon field="inventoryStatus"></p-sortIcon>
+                </th>
+                <th pSortableColumn="estimatedHours">Estimated Hours <p-sortIcon field="estimatedHours"></p-sortIcon>
+                </th>
+                <th pSortableColumn="startDate">Assigned Date <p-sortIcon field="startDate"></p-sortIcon>
+                </th>
+                <th pSortableColumn="goLive">Go Live <p-sortIcon field="goLive"></p-sortIcon>
+                </th>
                 <th>Progress</th>
+                <th></th>
             </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-object>
-            <tr (click)="getProjectDetails(object.IDX)">
+        <ng-template pTemplate="body" let-record>
+            <tr>
                 <td>
-                    <p-tableCheckbox [value]="object"></p-tableCheckbox>
+                    <p-tableCheckbox [value]="record"></p-tableCheckbox>
                 </td>
-                <td>{{object.PRM}}</td>
-                <td>{{object.projectName}}</td>
-                <td>{{object.priority}}</td>
-                <td>{{object.region}}</td>
-                <td>{{object.health}}</td>
-                <td>{{object.projectManager}}</td>
-                <td><span [class]="'product-badge status-' + (object.status ? object.status.toLowerCase() : '')">{{object.status}}</span></td>
-                <td>{{object.estimatedHours}}</td>
-                <td>{{object.startDate}}</td>
-                <td>{{object.goLive}}</td>
+                <td style="width: 4%;">{{record.PRM}}</td>
+                <td>{{record.projectName}}</td>
+                <td>{{record.priority}}</td>
+                <td>{{record.region}}</td>
+                <td>{{record.health}}</td>
+                <td>{{record.projectManager}}</td>
+                <td><span
+                        [class]="'product-badge status-' + (record.status ? record.status.toLowerCase() : '')">{{record.status}}</span>
+                </td>
+                <td>{{record.estimatedHours}}</td>
+                <td>{{record.startDate}}</td>
+                <td>{{record.goLive}}</td>
                 <td>
-                    {{object.progress ? object.progress : 0}} %
+                    <p-progressBar [value]="record.progress"></p-progressBar>
+                </td>
+                <td>
+                    <button pTooltip="Go to details of this record" tooltipPosition="left" pButton pRipple
+                        icon="pi pi-pencil" class="p-button-rounded p-button-info"
+                        (click)="getProjectDetails(record.IDX)"></button>
+                    <button pTooltip="Delete this record" tooltipPosition="bottom" pButton pRipple icon="pi pi-trash"
+                        class="p-button-rounded p-button-danger" (click)="deleteRecord(record)"></button>
                 </td>
             </tr>
         </ng-template>
@@ -70,67 +93,98 @@
         </ng-template>
     </p-table>
 </div>
-<!-- 
-<p-dialog [(visible)]="productDialog" [style]="{width: '450px'}" header="Product Details" [modal]="true" styleClass="p-fluid">
+
+<p-dialog [(visible)]="productDialog" [style]="{width: '450px'}" header="Create new project" [modal]="true"
+    styleClass="p-fluid" [breakpoints]="{'960px': '75vw'}">
     <ng-template pTemplate="content">
-        <img [src]="'assets/showcase/images/demo/product/' + product.image" [alt]="product.image" class="product-image" *ngIf="product.image">
-        <div class="field">
-            <label for="name">Name</label>
-            <input type="text" pInputText id="name" [(ngModel)]="product.name" required autofocus />
-            <small class="p-error" *ngIf="submitted && !product.name">Name is required.</small>
-        </div>
-        <div class="field">
-            <label for="description">Description</label>
-            <textarea id="description" pInputTextarea [(ngModel)]="product.description" required rows="3" cols="20"></textarea>
-        </div>
-        <div class="field">
-            <label for="inventoryStatus">Inventory Status</label>
-            <p-dropdown [(ngModel)]="product.inventoryStatus" inputId="inventoryStatus" [options]="statuses" placeholder="Select">
-                <ng-template let-option pTemplate="item">
-                    <span [class]="'product-badge status-' + option.value">{{option.label}}</span>
-                </ng-template>
-            </p-dropdown>
-        </div>
+        <form class="form-horizontal" [formGroup]="form">
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="PRM" class="control-label">PRM</label>
+                    <input type="number" id="PRM" class="form-control" formControlName="PRM" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="projectName" class="control-label">Project Name</label>
+                    <input autocomplete="off" type="text" id="projectName" class="form-control"
+                        formControlName="projectName" required>
+                </div>
+            </div>
 
-        <div class="field">
-            <label class="mb-3">Category</label>
-            <div class="formgrid grid">
-                <div class="field-radiobutton col-6">
-                    <p-radioButton id="category1" name="category" value="Accessories" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category1">Accessories</label>
-                </div>
-                <div class="field-radiobutton col-6">
-                    <p-radioButton id="category2" name="category" value="Clothing" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category2">Clothing</label>
-                </div>
-                <div class="field-radiobutton col-6">
-                    <p-radioButton id="category3" name="category" value="Electronics" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category3">Electronics</label>
-                </div>
-                <div class="field-radiobutton col-6">
-                    <p-radioButton id="category4" name="category" value="Fitness" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category4">Fitness</label>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="issueType" class="control-label">Issue Type</label>
+                    <select class="form-control" formControlName="issueType">
+                        <option [ngValue]="null" disabled>Select Issue Type</option>
+                        <option *ngFor="let issueType of projectTypes" [ngValue]="issueType">{{issueType}}</option>
+                      </select>
                 </div>
             </div>
-        </div>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="priority" class="control-label">Priority</label>
+                    <select class="form-control" formControlName="priority">
+                        <option [ngValue]="null" disabled>Select Priority</option>
+                        <option *ngFor="let priority of priorityTypes" [ngValue]="priority">{{priority}}</option>
+                      </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="region" class="control-label">Region</label>
+                    <input autocomplete="off" type="text" id="region" class="form-control"
+                        formControlName="region" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="projectManager" class="control-label">Project Manager</label>
+                    <input autocomplete="off" type="text" id="projectManager" class="form-control"
+                        formControlName="projectManager" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="status" class="control-label">Status</label>
+                    <select class="form-control" formControlName="status">
+                        <option [ngValue]="null" disabled>Select Status</option>
+                        <option *ngFor="let status of statusTypes" [ngValue]="status">{{status}}</option>
+                      </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="estimatedHours" class="control-label">Estimated Hours</label>
+                    <input autocomplete="off" type="number" id="estimatedHours" class="form-control" formControlName="estimatedHours" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="startDate" class="control-label">Assigned Date</label>
+                    <input autocomplete="off" type="date" id="startDate" class="form-control" formControlName="startDate" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="goLive" class="control-label">Go Live Date</label>
+                    <input autocomplete="off" type="date" id="goLive" class="form-control" formControlName="goLive" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-12">
+                    <label for="progress" class="control-label">Progress %</label>
+                    <input autocomplete="off" type="number" id="progress" class="form-control" max="100" min="0" formControlName="progress" required>
+                </div>
+            </div>
 
-        <div class="formgrid grid">
-            <div class="field col">
-                <label for="price">Price</label>
-                <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="USD" locale="en-US"></p-inputNumber>
-            </div>
-            <div class="field col">
-                <label for="quantity">Quantity</label>
-                <p-inputNumber id="quantity" [(ngModel)]="product.quantity"></p-inputNumber>
-            </div>
-        </div>
+        </form>
     </ng-template>
-
     <ng-template pTemplate="footer">
-        <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
-        <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="saveProduct()"></button>
+        <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="closeDialog()"></button>
+        <button pButton pRipple label="Save" icon="pi pi-check" [disabled]="!form.valid" class="p-button-text" (click)="createProject()"></button>
     </ng-template>
-</p-dialog> -->
+</p-dialog>
 
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 
