--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
         </ng-template> -->
     </p-toolbar>
 
-    <p-table #dt [value]="data" [rows]="10" [paginator]="true"
+    <p-table #dt [value]="data" [rows]="10" [paginator]="true" [rowsPerPageOptions]="[5,10,25]" [paginator]="true"
         [globalFilterFields]="['projectName','country.name','representative.name','status']" responsiveLayout="scroll"
         [(selection)]="selectedProducts" [rowHover]="true" dataKey="IDX"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
